--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <!-- header -->
     <header class="header">
         <div class="img">
-            <a href="#" class="logo"><i class="fa-duotone fa-solid fa-code fa-flip-horizontal fa-2xl" style="--fa-primary-color: #6bbfff; --fa-primary-opacity: 1; --fa-secondary-color: #8fceff; --fa-secondary-opacity: 1;"></i></i></a>
+            <a href="#" class="logo"><i class="fa-duotone fa-solid fa-code fa-flip-horizontal fa-2xl"
+                    style="--fa-primary-color: #6bbfff; --fa-primary-opacity: 1; --fa-secondary-color: #8fceff; --fa-secondary-opacity: 1;"></i></i></a>
             <a href="#" class="text">Portafolio</a>
         </div>
         <nav class="nav">
@@ -31,9 +32,9 @@
         <div class="card">
             <img src="./assets/BDEFE9D1-45CC-4409-B939-B8BBBF0F1DCF.jpeg" class="foto" alt="#">
             <div class="links">
-            <a href="" class="links"><i class="fa-brands fa-instagram"></i></a>
-            <a href="" class="links"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="" class="links"><i class="fa-brands fa-github"></i></a>
+                <a href="" class="links"><i class="fa-brands fa-instagram"></i></a>
+                <a href="" class="links"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="" class="links"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
         <div class="card">
@@ -48,11 +49,52 @@
     </section>
     <!-- fin hero -->
     <section class="content">
-        <div class="card-info">
-            <h2 id="about">Mi historia</h2>
-            <p>Soy un desarrollador web junior con experiencia en HTML, CSS y JavaScript. Me encanta crear sitios web atractivos y funcionales que brinden una excelente experiencia de usuario. Estoy emocionado por seguir aprendiendo y creciendo en el campo del desarrollo web.</p>
+        <div class="cards">
+
+            <div class="card-info">
+                <h2 id="about">Mi Historia</h2>
+                <p>Mi viaje hacia la programación comenzó con una curiosidad por cómo funcionan las cosas en la web.
+                    Viviendo de un campo diferente, me sentí impulsado por el desafío y la creatividad de dar vida a las
+                    ideas a través del código. Esta transición ha sido una emocionante aventura de aprendizaje continuo
+                    y resolución de problemas.</p>
+            </div>
+            <div class="card-info">
+                <h2 id="about">Habilidades Blandas y Filosofia</h2>
+                <p>Creo firmemente en la colaboración y la comunicación como pilares para construir productos exitosos.
+                    Mi enfoque se centra en la resolución proactiva de problemas, la empatía con el usuario final y un
+                    compromiso inquebrantable con el aprendizaje y la mejora continua. Me encanta desglosar desafíos
+                    complejos en partes manejables y trabajar en equipo para encontrar la mejor solución.</p>
+
+                <div>
+                    <span>Resolucion de problemas</span> <span>Comunicación Asertiva</span> <span>Trabajo en
+                        Equipo</span>
+                    <span>Aprendizaje Continuo</span> <span>Pensamiento Critico</span>
+                </div>
+            </div>
+            <div class="card-info">
+                <h2 id="about">Intereses y Pasiones</h2>
+                <p>Fuera del código, me apasiona el senderismo, donde encuentro claridad y nuevas perspectivas. También
+                    disfruto de la fotografía, capturando momentos que cuentan una historia, una habilidad que creo que
+                    se traduce en mi atención al detalle en el diseño web. Estos hobbies me ayudan a mantener un
+                    equilibrio saludable y a abordar mi trabajo con energía renovada.</p>
+                <hr>
+
+
+            </div>
+            <div class="card-info">
+                <p>Estoy emocionado por aplicar mi pasión y mis habilidades para crear productos web impactantes.
+                    ¿Construimos algo juntos?<br>
+                    
+                    <a href="" class="btn">Ver mis Proyectos
+                        <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i>
+                    </a>
+                </p>
+
+
+            </div>
         </div>
     </section>
+
 
 </body>
 
