adicion boton modo oscuro y js

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="#about" class="nav__link">Sobre Mí</a>
             <a href="#projects" class="nav__link">Proyectos</a>
             <a href="#contact" class="nav__link">Contacto</a>
+            <button id="themeBtn" ><i class="fa-solid fa-moon"></i></button>
         </nav>
     </header>
     <!-- fin header -->
@@ -95,7 +96,7 @@
         </div>
     </section>
 
-
+<script src="./js/index.js"></script>
 </body>
 
 </html>
